--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,133 @@
-body {
+
+body{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.item{
+  color: white;
+  padding: 0 2vw;
+  font-size: 3vh;
 }
+
+.item:hover{
+  text-decoration: none;
+  color: white;
+}
+.Talking-to {
+  background-color: #343a40;
+}
+.Talking-to p{
+  color: white;
+  font-weight: bold;
+  text-align: center;
+}
+.chatView .card-header{
+  height: 0rem;
+  padding-bottom: 1rem;
+  background-color: white;
+}
+
+#separator{
+  display: flex;
+  justify-content: flex-start;
+  margin-top: 1rem;
+  cursor: pointer;
+  transition: all 0.4s ease;
+}
+
+#separator:hover{
+  background-color: gray;
+  margin-top: 1rem;
+  margin-bottom: 0;
+  padding: 0;
+  color: white;
+}
+
+.btn-circle{ 
+  margin-left: 2rem;
+  margin-top: 0.5rem;
+  border-radius: 50%;
+  border-width: 0;
+  font-weight: bold;
+  
+}
+
+.user-and-chat span, p{
+  margin-left: 3rem;
+  text-align: match-parent;
+}
+
+.user-and-chat span{
+  font-weight: bold;
+}
+
+.notReadYet button{
+  padding: 0rem;
+  height: 2rem;
+  margin-left: 3rem;
+  margin-right: auto;
+  margin-top: 0.5rem;
+  font-size: 1.5rem;
+  font-weight: bold;
+  
+}
+
+.content{
+  height: 70vh;
+  overflow: hidden;
+  overflow-y: scroll;
+}
+
+.content::-webkit-scrollbar{
+  width: 0 !important
+}
+.content::-moz-any{
+  overflow: -moz-scrollbars-none;
+}
+
+.friendCard {
+  color: white;
+  text-align: left;
+  float: left;
+  background-color: #343a40;
+  clear: both;
+  padding: 1rem;
+  width: 50%;
+  margin: 0.5rem;
+}
+
+.userCard{
+  color: white;
+  text-align: left;
+  float: right;
+  background-color: #343a40;
+  clear: both;
+  padding: 1rem;
+  width: 50%;
+  margin: 0.5rem;
+}
+
+.chatBox {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  position: sticky;
+}
+
+.chatBox input{
+  width: 80%;
+}
+
+
+
+/* #card button{
+  width: 100%;
+} */
+
+/* @media only screen and (min-width: 568px) and(max-width: 768px) { */
+   /* #card button{
+    width: fit-content;
+  } */
+/* } */
+
